# sentynyx-app

./: .gitignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  OPEN-CORE.md  README.md  SECURITY.md  Sentynyx.html  TUTORIAL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-bundle-dryrun.yml  ci-e2e.yml  ci-feature-matrix.yml  ci-lints.yml  eval.yml  pages.yml  release.yml
apps/desktop/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/e2e/: guided-tour.spec.mjs  record-demo.mjs  run-e2e.mjs
apps/desktop/e2e/.videos/: page@2b770059b30a1656982183183a07301b.webm  page@f6c9b89e308a5a0f84b59567577a7631.webm
apps/desktop/scripts/: stage-sidecar.sh
apps/desktop/src/: Starfield.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  RELEASE.md  build.rs  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/binaries/: README.md
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/eval/: prompts.json
apps/desktop/src-tauri/eval/scripts/: README.md  presidio_compare.py
apps/desktop/src-tauri/eval/src/: main.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: audit.rs  cloud.rs  commands.rs  keys.rs  lib.rs  main.rs  models.rs  proxy.rs  router.rs  store.rs  telemetry.rs  vendetta.rs
apps/desktop/src-tauri/src/detect/: custom.rs  llm.rs  mod.rs  ner.rs  ner_sidecar.rs  regex.rs  structured.rs
apps/desktop/src-tauri/src/providers/: anthropic.rs  google.rs  local.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  xai.rs
apps/desktop/src-tauri/tests/: ner_live.rs  paranoid_isolation.rs
apps/desktop/src/app/: App.tsx
apps/desktop/src/chat/: Composer.tsx  Transcript.tsx
apps/desktop/src/chrome/: SentynyxMark.tsx  Sidebar.tsx  TopBar.tsx  VendettaPanel.tsx  styles.ts
apps/desktop/src/lib/: ipc.ts  models.ts  types.ts  useEscape.ts  vendetta.ts
apps/desktop/src/scenes/: AboutDialog.tsx  AgentDAG.tsx  BootSequence.tsx  CommandPalette.tsx  ComplianceDashboard.tsx  ConsensusArena.tsx  DevInspector.tsx  FirstRunWizard.tsx  GuidedTour.tsx  ModelDownloadPanel.tsx  OnboardingCard.tsx  OrbitalPicker.tsx  ParanoidToast.tsx  PolicyViolation.tsx  SettingsPanel.tsx  ThreatRadar.tsx  TweaksPanel.tsx  UpdateToast.tsx  XrayBeam.tsx
apps/desktop/src/styles/: global.css
design/: DESIGN_BRIEF.md
docs/: demo-script.md
docs/blog/: v0.3-we-rebuilt-pii-redaction.md
docs/eng/: keybinding-adr-template.md
docs/superpowers/plans/: 2026-04-19-semantic-redaction.md
docs/superpowers/specs/: 2026-04-19-semantic-redaction-design.md
docs/ux/: shortcuts.md
packaging/homebrew/: sentynyx.rb
scripts/: install.sh
